Curved Volume Integrate Singular Form pt 1 This is the code that generates a preview of the stl and combines onto a singular template. Has the 4 views, allows for indepedent rotation of each onto final template to account for folding. TODO: include form selection which is present but not accessed.     This requires greater abstraction. Also neccesary to work on the canvas and controls so that the page is more streamline and so the views can be controled by the singular set of controls, respectively

--- a/Web Page1.0/editStyles.css
+++ b/Web Page1.0/editStyles.css
@@ -16,12 +16,23 @@
     background-size: 20% 14.28%;
 }
 
-.editor-container-controls {
+#start_buttons{
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; 
+}
+
+.editor-container-controls {
+    flex-direction: column;
     margin-left: 10px;
+}
+
+#form_controls {
+    display: none;
+}
+
+#edit_buttons{
+    display: none;
 }
 
 .grid-control {
@@ -55,10 +66,6 @@ input[type=range]{
     width: 2.5em;
     margin-right: 10px;
     background-color: white;
-}
-
-#printPreview{
-    display: block;
 }
 
 /*TODO fix the upload styles so that the popup style and the home screen room*/
