--- a/Web Page1.0/styles.css
+++ b/Web Page1.0/styles.css
@@ -296,15 +296,22 @@ nav .fas{
     align-items: center; /* Horizontally center content */
 }
 
-.carousel{
-    display: flex;
-    flex-direction: row;
+.carousel-view{
     position:relative;
     width:500px;
     height:500px;
     margin: auto;
     overflow: hidden;
     overflow-x: auto; /* Allow horizontal scrolling */
+}
+.carousel-horses{
+    display: flex;
+    flex-direction: row;
+}
+
+.carousel-base{
+    justify-content: center; /* Vertically center content */
+    align-items: center; /* Horizontally center content */
 }
   
 .slide {
@@ -313,6 +320,29 @@ nav .fas{
     margin: 50px;
     flex: 0 0 auto;
 }
+
+/* Style for Text Indicators */
+.indicators {
+    text-align: center;
+    padding: 10px 0;
+  }
+  
+.indicator {
+cursor: pointer;
+display: inline-block;
+margin: 0 5px;
+padding: 5px;
+font-size: 16px;
+color: #333;
+background-color: #eee;
+border-radius: 5px;
+transition: background-color 0.6s ease;
+}
+
+.indicator:hover, .indicator.active {
+background-color: #bbb;
+}
+
 .canvases{
     display: flex;
     flex-direction: row;
