--- a/Web Page1.0/activity.css
+++ b/Web Page1.0/activity.css
@@ -174,6 +174,33 @@ nav .fas{
     font-weight: 400;
 }
 
+.list > li{
+    margin-left: 8%;
+    margin-bottom: 2%;
+}
+
+.unlisted {
+    margin-left: 5.5%;
+    margin-bottom: 2%;
+}
+
+.hyperlink:link{
+    color: #404040;
+    text-decoration: underline;
+}
+
+.hyperlink:visited{
+    color: #404040;
+    text-decoration: underline;
+}
+
+.hyperlink:hover{
+    color:#7072EC;
+}
+
+
+
+
 
 /* reference images */
 
