--- a/styles.css
+++ b/styles.css
@@ -93,9 +93,6 @@ nav .fas{
     cursor: pointer;
     width: fit-content;
 }
-#slide {
-    display: none;
-}
 
 #fb-tab{
     writing-mode: vertical-lr;
@@ -215,6 +212,12 @@ nav .fas{
     margin-bottom: 2vh;
 }
 
+#IntroVideoV2{
+    display: flex;
+    justify-content: center; /* Ensures the video is centered horizontally in the container */
+}
+
+
 .hide {
     position:absolute; 
     top:-1px; 
@@ -292,8 +295,6 @@ nav .fas{
 
 .carousel-view{
     position:relative;
-    width:500px;
-    height:500px;
     margin: auto;
     overflow: hidden;
     overflow-x: auto; /* Allow horizontal scrolling */
@@ -352,18 +353,36 @@ background-color: #bbb;
     margin: 20px; 
     left:50%;
 }
-.stl_contMain{
-    width: 600px; 
-    height: 500px;
-}
 
 .stl_cont{
-    width: 400px; 
-    height: 400px;
     background-color: #ffffff; /*TODO automate color change for screenshot*/
 }
 
-.stl_display{
+/* Base size */
+.stl_cont, .carousel-view {
+    width: 700px; /* Default size */
+    height: 700px; /* Adjust as needed */
+}
+  
+  /* For tablets */
+@media (max-width: 768px) {
+    .stl_cont, .carousel-view {
+        width: 450px;
+        height: 450px; /* Adjust based on your preference */
+    }
+}
+
+/* For mobile phones */
+@media (max-width: 480px) {
+    .stl_cont, .carousel-view {
+        width: 250px;
+        height: 250px; /* Adjust based on your preference */
+    }
+}
+  
+
+.stl_display, .slide{
+    width: fit-content;
     height: fit-content;
 }
 
@@ -559,7 +578,8 @@ background-color: #bbb;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 22%;
+    width: 22%; /*4: 18%, 3: 22%*/
+    /*adjusts the width of the items and in turn how many will be displayed*/
     height: 50vh;
     background: #7072EC;
     border-radius: 5%;
@@ -569,6 +589,7 @@ background-color: #bbb;
 .fs-item:hover  {
     -webkit-transform:scale(1.02); /* or some other value */
     transform:scale(1.02);
+    cursor: pointer;
 }
 
 .selected{
