--- a/printerform/src/app/globals.css
+++ b/printerform/src/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap");
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -14,6 +15,20 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
+}
+
+main {
+  font-family: "Garamond", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.sora-font {
+  font-family: "Sora", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
 }
 
 body {
@@ -43,7 +58,9 @@ body {
     @apply text-lg;
   }
 
-  h3, h4, h5 {
+  h3,
+  h4,
+  h5 {
     @apply text-base;
   }
 }
