--- a/printerform/src/app/globals.css
+++ b/printerform/src/app/globals.css
@@ -1,12 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap");
+@import url("https://use.typekit.net/zst0kpr.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap");
 
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+}
+
+nav {
+  /* -webkit-mask-image: linear-gradient(to bottom, white 100%, transparent 100%); */
+  mask-image: linear-gradient(to bottom, white 90%, transparent 100%);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,18 +23,11 @@
   }
 }
 
-main {
-  font-family: "Garamond", serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
-  font-style: normal;
-}
-
-.sora-font {
-  font-family: "Sora", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 300;
-  font-style: normal;
+.example {
+  font-family: "sora", sans-serif;
+  font-variation-settings:
+    "wght" 400,
+    "wdth" 100;
 }
 
 body {
